<resources>
    <string name="app_name">WebRtcClient</string>
    <string name="start_fragment_btn_log_in">Log In</string>
    <string name="start_fragment_btn_sign_up">Sign Up</string>
    <string name="sign_up_fragment_btn_sign_up">Sign Up</string>
    <string name="log_in_fragment_btn_log_in">Log In</string>
    <string name="start_fragment_label_language">Language</string>
    <string name="application_language_english">English</string>
    <string name="application_language_russian">Chines</string>
    <string name="login_fragment_title_welcome_back">Welcome back!</string>
    <string name="login_fragment_label_phone_number">Phone number</string>
    <string name="login_fragment_label_password">Password</string>
    <string name="login_fragment_hint_enter_password">Enter your password</string>
    <string name="login_fragment_button_sing_in">Sign in</string>
    <string name="error_field_is_empty">Field is empty</string>
    <string name="error_ivalid_email_format">Invalid email format</string>
    <string name="error_name_too_short">Name is too short</string>
    <string name="error_name_too_long">Name is too long</string>
    <string name="error_password_must_be_at_least_characters_long">Password must be at least 8 characters long</string>
    <string name="error_invalid_phone_number">Invalid phone number format</string>
    <string name="error_can_not_connect_to_server">Can not connect to server. Check your internet connection and try again</string>
    <string name="login_framgent_login_failed">Log in failed</string>
    <string name="fragment_register_title">Create new account</string>
    <string name="register_fragment_email_field">Email</string>
    <string name="register_fragment_enter_your_name">Enter your name</string>
    <string name="register_fragment_email">Email</string>
    <string name="fragment_signup_signup_button">Sign up</string>
    <string name="register_fragment_registration_error">Registration error</string>
    <string name="toolbar_title_one_to_one_call">One-to-One Call</string>
    <string name="call_fragment_call_button">Call</string>
    <string name="call_fragment_hint_enter_user_s_id">Enter User`s ID</string>
    <string name="cannot_get_current_user_profile">Can not get current user profile</string>
    <string name="search_view_hint_search">Search</string>
    <string name="log_out">Log out</string>


    <string name="fragment_contacts_title">Contacts</string>
    <string name="p2p_call_fragment_message">
        <![CDATA[Your current User ID is <strong>%s</strong>. In order to call to User, please enter his/her User ID below.]]></string>
</resources>
