<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <app.rtcmeetings.ui.widget.ToolbarView
        android:id="@+id/toolbarView"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tv_action_left_icon="@drawable/ic_arrowback"
        app:tv_action_left_tint="@color/textColorDark"
        app:tv_text="@string/toolbar_title_one_to_one_call"/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp8"
        android:textSize="@dimen/sp16"
        android:layout_marginStart="@dimen/dp34"
        android:layout_marginEnd="@dimen/dp34"
        android:textColor="@color/textColorDark"
        android:fontFamily="@font/helvetica_neue_light"
        android:text="Your current User ID is ID 15. In order to call to User, please enter his/her User ID below."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarView"
        app:layout_constraintStart_toStartOf="parent"/>


    <EditText
        android:id="@+id/etId"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_search_view"
        android:digits="0123456789"
        android:inputType="number"
        android:layout_marginStart="@dimen/dp72"
        android:layout_marginEnd="@dimen/dp72"
        android:longClickable="false"
        android:overScrollMode="never"
        android:paddingStart="@dimen/dp24"
        android:paddingTop="@dimen/dp8"
        android:hint="@string/call_fragment_hint_enter_user_s_id"
        android:paddingEnd="@dimen/dp24"
        android:paddingBottom="@dimen/dp8"
        android:textSize="@dimen/sp16"
        android:layout_marginTop="@dimen/dp24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStartCall"
        style="@style/AppTheme.GradientedLoginButton"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp26"
        android:layout_marginBottom="@dimen/dp16"
        android:text="@string/call_fragment_call_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etId"
        app:layout_constraintWidth_percent="0.45"/>

</androidx.constraintlayout.widget.ConstraintLayout>